--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,31 @@
         <title>Expenses</title>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/2.3.0/knockout-min.js"></script>
+        <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>-->
+        <script src="js/css-reloader.js"></script>
+        <script src="js/util.js"></script>
+        <script src="js/ExpenseForm.js"></script>
+        <script src="js/ExpenseGroup.js"></script>
+        <script src="js/Expense.js"></script>
+        <script src="js/Root.js"></script>
         <script src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <style id="name_css"></style>
     </head>
     <body>
         <h1>Expenses</h1>
+        <form
+        action=""
+        class="new_expense"
+        data-bind="with: tempExpenseForm, submit: saveTempExpense">
+            <select data-bind="options: $root.people"></select>
+            <select data-bind="options: months"></select>
+            <select data-bind="options: days"></select>
+            <select data-bind="options: years"></select>
+            <input type="number" min="1" max="9999" step="1" placeholder="price" data-bind="value: price">
+            <input id="new_expense_description" type="text" placeholder="description" data-bind="value: description">
+            <button type="submit">Create</button>
+        </form>
         <div class="floaty_container">
             <table id="summary">
                 <thead>
@@ -21,25 +40,25 @@
                         <th class="right">Amount</th>
                     </tr>
                 </thead>
-                <tbody data-bind="foreach: summary">
+                <tbody data-bind="foreach: expenseGroup().summary()">
                     <tr>
                         <td><div class="color_left" data-bind="text: debtor, css: 'color_' + debtor.toLowerCase()"></div></td>
                         <td><div class="color_left" data-bind="text: debtee, css: 'color_' + debtee.toLowerCase()"></div></td>
-                        <td class="money" data-bind="text: '$' + amount.toFixed(2)"></td>
+                        <td class="money" data-bind="text: amount.toFixed(0)"></td>
                     </tr>
                 </tbody>
             </table>
         </div>
-        <div id="expense_group" data-bind="foreach: { data: expenses, as: 'expense' }">
+        <div id="expense_group" data-bind="foreach: { data: expenseGroup().expenses(), as: 'expense' }">
             <div class="expense_item">
                 <div>
-                    <span class="money">$<span data-bind="text: formattedPrice"></span></span>
+                    <span class="money"><span data-bind="text: formattedPrice"></span></span>
                     <span class="trivial_word">on</span>
                     <span data-bind="text: formattedDate"></span>
                     <span class="trivial_word">by</span>
                     <input class="stealth_edit paid_by" data-bind="value: paidBy">
                     <span class="share_value">
-                        <span class="money" data-bind="text: '$' + formattedShare()"></span>
+                        <span class="money" data-bind="text: formattedShare"></span>
                         <span class="trivial_word">each</span>
                     </span>
                     <div class="clearfix"></div>
