--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/style.css">
         <style id="name_css"></style>
     </head>
-    <body>
+    <body data-bind="event: { keydown: handleKeyboardShortcuts }">
         <div id="debts" class="column" data-bind="foreach: expenseGroup().summary()">
             <h1
             colspan="2"
@@ -36,11 +36,12 @@
             </div>
         </div>
         <div id="expenses" class="column">
-            <h1>Expenses</h1>
+            <!-- <h1>Expenses</h1>-->
             <div class="main_margin">
                 <button
                 type="button"
                 class="form_toggle floaty_container transient"
+                id="new_expense_show"
                 data-bind="
                 visible: tempExpenseForm().notVisibile,
                 click: tempExpenseForm().show">
@@ -58,22 +59,30 @@
                 <div>
                     <span data-bind="text: $root.currentUser"></span>
                     <span class="trivial_word">spent</span>
-                    <input type="number" min="1" max="9999" step="1" placeholder="$" data-bind="value: price">
+                    <input id="price_field" class="price" type="text" min="1" max="9999" step="1" placeholder="$" data-bind="value: price">
                     <span class="trivial_word">for</span>
                     <select data-bind="options: $root.everyoneAndPeople, value: spendTarget"></select>
                 </div>
                 <div>
                     <span class="trivial_word">on</span>
                     <select data-bind="options: months, value: selectedMonth"></select>
+                    <span class="trivial_word">/</span>
                     <select data-bind="options: days,   value: selectedDay"></select>
+                    <span class="trivial_word">/</span>
                     <select data-bind="options: years,  value: selectedYear"></select>
+                    <span class="trivial_word">to pay for</span>
                 </div>
                 <div>
-                    <input id="new_expense_description" class="long" type="text" placeholder="groceries, bills, etc." data-bind="value: description">
+                    <input
+                    id="new_expense_description"
+                    class="long description"
+                    type="text"
+                    placeholder="groceries, bills, etc."
+                    data-bind="value: description">
                 </div>
                 <div class="button_group">
                     <button type="submit" class="primary"><span class="icon icon-plus"></span>Add</button>
-                    <button type="button" data-bind="click: hide"><span class="icon icon-close"></span>Cancel</button>
+                    <button type="button" id="new_expense_hide" data-bind="click: hide"><span class="icon icon-close"></span>Cancel</button>
                 </div>
             </form>
             <div id="expense_group" data-bind="foreach: { data: expenseGroup().expenses(), as: 'expense' }">
@@ -91,7 +100,7 @@
                     </div>
                     <div>
                         <span class="description" data-bind="text: description"></span
-                        ><span class="share_value">
+                        ><span class="share_value" data-bind="visible: paidFor() === 'everyone'">
                             <span class="money" data-bind="text: formattedCurrency(share)"></span>
                             <span class="trivial_word">each</span>
                         </span>
