Axed keybinds; fixed card 'shadows'

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/style.css">
         <style id="name_css"></style>
     </head>
-    <body data-bind="event: { keydown: handleKeyboardShortcuts }">
+    <body>
         <div id="debts" class="column" data-bind="foreach: expenseGroup().summary()">
             <h1
             colspan="2"
