--- a/public/index.html
+++ b/public/index.html
@@ -18,92 +18,100 @@
         <style id="name_css"></style>
     </head>
     <body>
-        <div id="debts" class="column" data-bind="foreach: expenseGroup().summary()">
-            <h1
-            colspan="2"
-            data-bind="
-            text: $data[0].debtor + ' owes',
-            css: 'color_' + $data[0].debtor"></h1>
-            <div class="floaty_container">
-                <table class="summary">
-                    <tbody data-bind="foreach: $data">
-                        <tr>
-                            <td class="money" data-bind="text: formattedCurrency(amount)"></td>
-                            <td><div class="color_left" data-bind="text: debtee, css: 'color_' + debtee"></div></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <div id="header">
+            <span id="title">Expenses</span>
+            <span id="login">
+                Welcome back, <span data-bind="text: currentUser"></span>
+            </span>
         </div>
-        <div id="expenses" class="column">
-            <!-- <h1>Expenses</h1>-->
-            <div class="main_margin">
-                <button
-                type="button"
-                class="form_toggle floaty_container transient"
-                id="new_expense_show"
+        <div id="column_container">
+            <div id="debts" class="column" data-bind="foreach: expenseGroup().summary()">
+                <h1
+                colspan="2"
                 data-bind="
-                visible: tempExpenseForm().notVisibile,
-                click: tempExpenseForm().show">
-                    add expense&hellip;
-                </button>
+                text: $data[0].debtor + ' owes',
+                css: 'color_' + $data[0].debtor"></h1>
+                <div class="floaty_container">
+                    <table class="summary">
+                        <tbody data-bind="foreach: $data">
+                            <tr>
+                                <td class="money" data-bind="text: formattedCurrency(amount)"></td>
+                                <td><div class="color_left" data-bind="text: debtee, css: 'color_' + debtee"></div></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
-            <form
-            action=""
-            id="expense_form"
-            class="floaty_container"
-            data-bind="
-            with: tempExpenseForm,
-            submit: saveTempExpense,
-            visible: tempExpenseForm().visible">
-                <button type="button" class="close" id="new_expense_hide" data-bind="click: hide">
-                    <img src="img/close.png">
-                </button>
-                <div>
-                    <span data-bind="text: $root.currentUser"></span>
-                    <span class="trivial_word">spent</span>
-                    <input id="price_field" class="price" type="text" min="1" max="9999" step="1" placeholder="$" data-bind="value: price">
-                    <span class="trivial_word">for</span>
-                    <select data-bind="options: $root.everyoneAndPeople, value: spendTarget"></select>
+            <div id="expenses" class="column">
+                <!-- <h1>Expenses</h1>-->
+                <div class="main_margin">
+                    <button
+                    type="button"
+                    class="form_toggle floaty_container transient"
+                    id="new_expense_show"
+                    data-bind="
+                    visible: tempExpenseForm().notVisibile,
+                    click: tempExpenseForm().show">
+                        add expense&hellip;
+                    </button>
                 </div>
-                <div>
-                    <span class="trivial_word">on</span>
-                    <select data-bind="options: months, value: selectedMonth"></select>
-                    <span class="trivial_word">/</span>
-                    <select data-bind="options: days,   value: selectedDay"></select>
-                    <span class="trivial_word">/</span>
-                    <select data-bind="options: years,  value: selectedYear"></select>
-                    <span class="trivial_word">to pay for</span>
-                </div>
-                <div>
-                    <input
-                    id="new_expense_description"
-                    class="long description"
-                    type="text"
-                    placeholder="groceries, bills, etc."
-                    data-bind="value: description">
-                    <button id="add_button" type="submit">Add</button>
-                </div>
-            </form>
-            <div id="expense_group" data-bind="foreach: { data: expenseGroup().expenses(), as: 'expense' }">
-                <div class="expense_item">
+                <form
+                action=""
+                id="expense_form"
+                class="floaty_container"
+                data-bind="
+                with: tempExpenseForm,
+                submit: saveTempExpense,
+                visible: tempExpenseForm().visible">
+                    <button type="button" class="close" id="new_expense_hide" data-bind="click: hide">
+                        <img src="img/close.png">
+                    </button>
                     <div>
-                        <span class="money"><span data-bind="text: formattedCurrency(price)"></span></span>
-                        <span class="trivial_word">on</span>
-                        <span data-bind="text: formattedDate(date)"></span>
-                        <span class="trivial_word">by</span>
-                        <span data-bind="text: paidBy"></span>
-                        <span data-bind="visible: paidFor() !== 'everyone'">
-                            <span class="trivial_word">for</span>
-                            <span data-bind="text: paidFor"></span>
-                        </span>
+                        <span data-bind="text: $root.currentUser"></span>
+                        <span class="trivial_word">spent</span>
+                        <input id="price_field" class="price" type="text" min="1" max="9999" step="1" placeholder="$" data-bind="value: price">
+                        <span class="trivial_word">for</span>
+                        <select data-bind="options: $root.everyoneAndPeople, value: spendTarget"></select>
                     </div>
                     <div>
-                        <span class="description" data-bind="text: description"></span
-                        ><span class="share_value" data-bind="visible: paidFor() === 'everyone'">
-                            <span class="money" data-bind="text: formattedCurrency(share)"></span>
-                            <span class="trivial_word">each</span>
-                        </span>
+                        <span class="trivial_word">on</span>
+                        <select data-bind="options: months, value: selectedMonth"></select>
+                        <span class="trivial_word">/</span>
+                        <select data-bind="options: days,   value: selectedDay"></select>
+                        <span class="trivial_word">/</span>
+                        <select data-bind="options: years,  value: selectedYear"></select>
+                        <span class="trivial_word">to pay for</span>
+                    </div>
+                    <div>
+                        <input
+                        id="new_expense_description"
+                        class="long description"
+                        type="text"
+                        placeholder="groceries, bills, etc."
+                        data-bind="value: description">
+                        <button id="add_button" type="submit">Add</button>
+                    </div>
+                </form>
+                <div id="expense_group" data-bind="foreach: { data: expenseGroup().expenses(), as: 'expense' }">
+                    <div class="expense_item">
+                        <div>
+                            <span class="money"><span data-bind="text: formattedCurrency(price)"></span></span>
+                            <span class="trivial_word">on</span>
+                            <span data-bind="text: formattedDate(date)"></span>
+                            <span class="trivial_word">by</span>
+                            <span data-bind="text: paidBy"></span>
+                            <span data-bind="visible: paidFor() !== 'everyone'">
+                                <span class="trivial_word">for</span>
+                                <span data-bind="text: paidFor"></span>
+                            </span>
+                        </div>
+                        <div>
+                            <span class="description" data-bind="text: description"></span
+                            ><span class="share_value" data-bind="visible: paidFor() === 'everyone'">
+                                <span class="money" data-bind="text: formattedCurrency(share)"></span>
+                                <span class="trivial_word">each</span>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
