--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     <body>
         <div id="navigation">
             <div id="title">$sharing</div>
-            <a id="expenses" href="#expenses">Expenses</a>
-            <a id="payments" href="#payments">Payments</a>
+            <a id="expenses_tab" data-bind="event: { click: $root.currentTab.bind(null, 'expenses') }" href="#expenses">Expenses</a>
+            <a id="debts_tab"    data-bind="event: { click: $root.currentTab.bind(null, 'debts') }"    href="#debts">Debts</a>
         </div>
         <div id="column_container">
             <div id="debts" class="column" data-bind="foreach: expenseGroup().summary()">
