--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         <div id="navigation">
             <div id="title">$sharing</div>
             <a id="expenses_tab" data-bind="event: { click: $root.currentTab.bind(null, 'expenses') }" href="#expenses">Expenses</a>
+            <a id="payments_tab" data-bind="event: { click: $root.currentTab.bind(null, 'payments') }" href="#payments">Payments</a>
             <a id="debts_tab"    data-bind="event: { click: $root.currentTab.bind(null, 'debts') }"    href="#debts">Debts</a>
         </div>
         <div id="column_container">
