--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,13 @@
     <body>
         <div id="navigation">
             <div id="title">$sharing</div>
-            <a id="expenses_tab" data-bind="event: { click: $root.currentTab.bind(null, 'expenses') }" href="#expenses">Expenses</a>
-            <a id="payments_tab" data-bind="event: { click: $root.currentTab.bind(null, 'payments') }" href="#payments">Payments</a>
-            <a id="debts_tab"    data-bind="event: { click: $root.currentTab.bind(null, 'debts') }"    href="#debts">Debts</a>
+            <a id="expenses_tab" data-bind="css: { selected: $root.currentTab() === 'expenses' }, event: { click: $root.currentTab.bind(null, 'expenses') }" href="#expenses">Expenses</a>
+            <a id="payments_tab" data-bind="css: { selected: $root.currentTab() === 'payments' }, event: { click: $root.currentTab.bind(null, 'payments') }" href="#payments">Payments</a>
+            <a id="debts_tab"    data-bind="css: { selected: $root.currentTab() === 'debts'    }, event: { click: $root.currentTab.bind(null, 'debts') }"    href="#debts">Debts</a>
         </div>
         <div id="column_container">
-            <div id="debts" class="column" data-bind="foreach: expenseGroup().summary()">
+            <div id="debts" class="column"
+            data-bind="visible: $root.currentTab() === 'debts', foreach: expenseGroup().summary()">
                 <h1
                 colspan="2"
                 data-bind="
@@ -42,7 +43,7 @@
                     </table>
                 </div>
             </div>
-            <div id="expenses" class="column">
+            <div id="expenses" class="column" data-bind="visible: $root.currentTab() === 'expenses'">
                 <!-- <h1>Expenses</h1>-->
                 <div class="main_margin">
                     <button
@@ -64,7 +65,7 @@
                 submit: saveTempExpense,
                 visible: tempExpenseForm().visible">
                     <button type="button" class="close" id="new_expense_hide" data-bind="click: hide">
-                        <img src="img/close.png">
+                        <img src="img/close.svg">
                     </button>
                     <div>
                         <span data-bind="text: $root.currentUser"></span>
