--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,39 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Expenses</title>
+        <title>$sharing</title>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/knockout/2.3.0/knockout-min.js"></script>
         <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/0.9.16/socket.io.min.js"></script>-->
-        <script src="js/css-reloader.js"></script>
+        <!-- <script src="js/css-reloader.js"></script>-->
         <script src="js/util.js"></script>
         <script src="js/ExpenseForm.js"></script>
         <script src="js/ExpenseGroup.js"></script>
         <script src="js/Expense.js"></script>
         <script src="js/Root.js"></script>
         <script src="js/main.js"></script>
+        <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">-->
         <link rel="stylesheet" href="css/style.css">
         <style id="name_css"></style>
     </head>
     <body>
         <div id="navigation">
             <div id="title">$sharing</div>
-            <a id="expenses_tab" data-bind="css: { selected: $root.currentTab() === 'expenses' }, event: { click: $root.currentTab.bind(null, 'expenses') }" href="#expenses">Expenses</a>
-            <a id="payments_tab" data-bind="css: { selected: $root.currentTab() === 'payments' }, event: { click: $root.currentTab.bind(null, 'payments') }" href="#payments">Payments</a>
-            <a id="debts_tab"    data-bind="css: { selected: $root.currentTab() === 'debts'    }, event: { click: $root.currentTab.bind(null, 'debts') }"    href="#debts">Debts</a>
+            <a id="nav_toggle" href="#" data-bind="event: { click: toggleObservable.bind(null, menuVisible) }">
+                <span id="nav_toggle_icon"><img src="/img/menu.svg"></span>
+                <span>$sharing</span>
+            </a>
+            <span data-bind="css: { menu_collapsed: menuVisible }">
+                <a id="expenses_tab" class="tab" data-bind="css: { selected: currentTab() === 'expenses' }, event: { click: currentTab.bind(null, 'expenses') }" href="#expenses">Expenses</a>
+                <a id="payments_tab" class="tab" data-bind="css: { selected: currentTab() === 'payments' }, event: { click: currentTab.bind(null, 'payments') }" href="#payments">Payments</a>
+                <a id="debts_tab"    class="tab" data-bind="css: { selected: currentTab() === 'debts'    }, event: { click: currentTab.bind(null, 'debts') }"    href="#debts">Debts</a>
+            </span>
+            <span class="clearfix"></span>
         </div>
         <div id="column_container">
-            <div id="debts" class="column"
-            data-bind="visible: $root.currentTab() === 'debts', foreach: expenseGroup().summary()">
+            <div id="debts" class="column" data-bind="
+            visible: currentTab() === 'debts',
+            foreach: expenseGroup().summary()">
                 <h1
                 colspan="2"
                 data-bind="
