--- a/public/index.html
+++ b/public/index.html
@@ -95,7 +95,9 @@
                         <span class="trivial_word">when</span>
                         <div class="date_group">
                             <select data-bind="options: months, value: selectedMonth"></select>
+                            <span class="trivial_word">/</span>
                             <select data-bind="options: days,   value: selectedDay"></select>
+                            <span class="trivial_word">/</span>
                             <select data-bind="options: years,  value: selectedYear"></select>
                         </div>
                     </div class="field">
